*avidemux-plugins-2.6.8 (24 Feb 2016)

  24 Feb 2016; Poncho <poncho@spahan.ch> +avidemux-plugins-2.6.8.ebuild,
  +files/avidemux-plugins-2.6.4-optional-pulse.patch, +metadata.xml:
  media-libs/avidemux-plugins: import from gx86