@@ -1,1 +1,1 @@
-DIST avidemux_2.6.8.tar.gz 17380534 SHA256 02998c235a89894d184d745c94cac37b78bc20e9eb44b318ee2bb83f2507e682 SHA512 57a4042f1a9d46462850871d36950215c5ffb5b66ce2f2cde09d747e946c05adb7a550ac7763c96f4c1bcb2c39881407d9d88bc64c93053741091751495ba0b0 WHIRLPOOL 29f8a6039d82e686e8dfbfc7b23658921834238a4cc6c4de338afdfdc032a9a7cba1c8236789aa6dbcab318ec14c344c19563f153e6cbd63cd265c5fb15b44b6
+DIST avidemux_2.6.11.tar.gz 17980757 SHA256 936ff5e10ad0551460c1233c217e4cee642623f2899a8fe48cd7f0144cfd1b3a SHA512 623944125e46ed1d9e8f5a18dd4094f40a2ca20e40dc6be644533cc8f99318fa062094e351be6fe5a769d93ec651d82c52774ac97bcc669d74afecac69c8d2c8 WHIRLPOOL 8043e80cad04df7fb167891129f8e5e1fef26e74ee71086980d5f8bc4b09d5905193c753ce66a266c0a6b92f66a7d8fdcdc8778b1d69653a2eaf6f76e1a14625
