@@ -9,8 +9,11 @@
     <flag name="aften">Enable A/52 (AC-3) audio encoder support.</flag>
     <flag name="amr">Enable Adaptive Multi-Rate format support via <pkg>media-libs/opencore-amr</pkg>.</flag>
     <flag name="fribidi">Enable unicode bidirectional algorithm support via <pkg>dev-libs/fribidi</pkg>.</flag>
+	<flag name="nvenc">Adds support for NVIDIA Encoder (NVENC) API for hardware accelerated encoding on NVIDIA cards.</flag>
+	<flag name="opus">Adds support for the Opus codec via <pkg>media-libs/opus</pkg>.</flag>
     <flag name="twolame">Enable TwoLAME support via <pkg>media-sound/twolame</pkg>, an optimised MPEG Audio Layer 2 (MP2) encoder.</flag>
     <flag name="vpx">Enable WebM VP8 Codec SDK support via <pkg>media-libs/libvpx</pkg>.</flag>
+	<flag name="x265">Enables HEVC support with <pkg>media-libs/x265</pkg>.</flag>
   </use>
   <upstream>
     <remote-id type="sourceforge">avidemux</remote-id>
