@@ -1,3 +1,10 @@
+*avidemux-plugins-2.6.11 (24 Feb 2016)
+
+  24 Feb 2016; Poncho <poncho@spahan.ch> +avidemux-plugins-2.6.11.ebuild,
+  -avidemux-plugins-2.6.8.ebuild, metadata.xml:
+  media-libs/avidemux-plugins: version bump  see
+  https://github.com/stefantalpalaru/gentoo-overlay
+
 *avidemux-plugins-2.6.8 (24 Feb 2016)
 
   24 Feb 2016; Poncho <poncho@spahan.ch> +avidemux-plugins-2.6.8.ebuild,
